--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,3 +1,17 @@
 footer {
 	clear: both;
+	display: flex;
+	justify-content: center;
+	background-image: url(./images/bluebg.png);
+	background-position: center;
+	width: 100%;
+	height: 20vh;
+	.wrapper {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		p {
+			color: white;
+		}
+	}
 }
