--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -1,3 +1,19 @@
+header {
+	position: absolute;
+	width: 80%;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
+	.container {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		img {
+			max-width: 150px;
+		}
+	}
+}
+
 ul.menu {
 	margin: 0;
 	padding: 0;
@@ -6,9 +22,11 @@ ul.menu {
 		margin-right: 10px;
 		a {
 			color: #333;
-			padding: 10px;
-			background: #333;
 			color: white;
+			transition: 0.6s;
+			&:hover {
+				color: cyan;
+			}
 		}
 	}
 }
