--- a/sass/style.scss
+++ b/sass/style.scss
@@ -28,24 +28,82 @@ body {
 }
 
 .container {
-	max-width: 1200px;
+	// max-width: 1200px;
 	margin: 0 auto;
 }
 
+.wrapper {
+	width: 80%;
+}
+
 .content {
-	float: left;
-	width: 65%;
-	margin-right: 5%;
+	
 }
 
 .full {
 	width: 100%;
 }
 
+.hero {
+	background-size: cover;
+	background-attachement: fixed;
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	.wrapper {
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		h1 {
+			color: white;
+			letter-spacing: 8px;
+			font-size: 80px;
+		}
+		h3 {
+			color: white;
+		}
+	}
+}
 
+.services {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	.serviceContent {
+		display: flex;
+		justify-content: space-between;
+		.contentItem {
+			background: #fafafa;
+			width: 30%;
+		}
+	}
+}
 
+.quote {
+	background-image: url(./images/claybg.png);
+	background-size: cover;
+	background-position: center 25%;
+	width: 100%;
+	height: 30vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	h3 {
+		color: white;
+		font-style: italic;
+		font-weight: normal;
+		letter-spacing: 2px;
+		text-align: center;
+	}
+}
 
-
-
-
-
+footer {
+	background-image: url(./images/bluebg.png);
+	width: 100%;
+	height: 25vh;
+	p {
+		color: white;
+	}
+}
